2009-03-12  Sven Neumann  <sven@gimp.org>

	Bug 573070 – crash when working with 1x3200 pixel image

	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
	make sure that x_src_dec and y_src_dec never become zero.

2009-03-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimpscanconvert.c (gimp_scan_convert_render_full):
	formatting.

2009-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg.h (PLUG_IN_BINARY): fixed typo.

2009-03-09  Alexia Death  <alexiadeath@gmail.com>

	* app/paint/gimpsmudge.c
	(gimp_smudge_class_init): enable scaling for smudge tool
	(gimp_smudge_motion): correct comment.

2009-03-08  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb (image_add_channel): corrected
	documentation of the position parameter.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.c
	(gimp_container_view_item_selected): formatting.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/stroke-dialog.c (stroke_dialog_response): disconnect
	from the "paint-info" combo-box before destroying the dialog. The
	GimpContainerView emits "select-item" from its dispose handler.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	(gimp_container_combo_box_changed): do not attempt to chain up in
	a signal callback.

2009-03-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg-load.c (load_image)
	* plug-ins/file-jpeg/jpeg-save.c (save_image): need to finish the
	progress update.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c: formatting.

2009-03-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/blinds.c: use enum GimpOrientationType instead
	of local #defines for HORIZONTAL and VERTICAL with identical
	values. Some indentation and formatting fixups.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererimagefile.c